@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2018 Laboratoire de Recherche et Développement de
+# Copyright (C) 2018, 2019 Laboratoire de Recherche et Développement de
 # l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -25,6 +25,10 @@ ltl2tgba -f FGa '"a = b"U!c' |
     autcross 'autfilt' 'ltl2tgba -B %M >%O' --csv=out.csv
 test 2 = `grep -c '"FGa"' out.csv`
 test 2 = `grep -c '"""a = b"" U !c"' out.csv`
+
+ltl2tgba -f FGa '"a = b"U!c' |
+    autcross -q 'autfilt' 'ltl2tgba -B %M >%O' 2>out
+test 0 -eq `wc -l <out`
 
 
 cat >in <<EOF
@@ -73,6 +77,15 @@ cat err
 grep 'No major problem' err && exit 1
 grep 'some error was detected ' err
 grep '1 non-zero exit status was ignored' err
+test 1 = `wc -l < out.csv`
+
+# Same with -q
+autcross -T3 -q --language-preserved --ignore-execution-failures \
+         --csv=out.csv --omit-missing --low --medium --high --stop-on-error \
+         --fail-on-timeout \
+         'sleep 10; autfilt %H>%O' 'false %H %O' 2>err -Fin && exit 1
+cat err
+test 4 = `wc -l <err`
 test 1 = `wc -l < out.csv`
 
 autcross - 2> err && exit 1
